# UM_Blochsim

./: .gitignore  Makefile  __init__.py  bloch_eul.c  bloch_rk.c  blochsim.c  blochsim.py  blochsim_core.h  pyproject.toml  setup.py
UM_Blochsim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
incl/: blochsim_3d.h  blochsim_core.h  blochsim_ljn.h
src/: bloch_eul.c  bloch_ljn.c  bloch_rk4.c
