[project]
name = "UM_Blochsim"
version = "1.0"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["Cython>3.0.0", "build", "setuptools"]

[build-system]
requires = ["Cython>=3.0.0", "setuptools", "numpy", "wheel"]
build-backend = "setuptools.build_meta"

#[tool.setuptools.packages.find]
#where = ["."]

#[tool.setuptools.exclude-package-data]
#UM_Blochsim = "*.c"
